--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = { version = "1.0.100", default-features = false }
+compiler_builtins = { version = "0.1.160", default-features = false }
+heapless = { version = "0.9.1", default-features = false }
+log = { version = "0.4.28", default-features = false }
